# VisageSDK

./: .env.all  .env.eval.example  .env.example  .gitignore  LICENSE  README.md  eval.py  pyproject.toml  requirements.txt  train.py
configs/backbone/: dinov3_vitb16.yaml  dinov3_vitb16_native.yaml  dinov3_vitl16_native.yaml  inception_resnet_v1.yaml  inception_resnet_v2.yaml  inception_v4.yaml  lvface_vit_b.yaml  megadescriptor_l_384.yaml  megadescriptor_l_384_head.yaml  megadescriptor_t_224.yaml  megadescriptor_t_224_head.yaml  mobilenetv3.yaml
configs/batch_sampler/: facenet.yaml
configs/dataset/eval/: cattely_identification.yaml  cattely_verification.yaml  ceia_motion_detection.yaml  ceia_motion_detection_faces.yaml  ceia_motion_detection_faces_train_gallery.yaml  ceia_motion_detection_faces_verification.yaml  ceia_motion_detection_periodic.yaml  ceia_motion_detection_verification.yaml  ceia_similarity.yaml  ceia_similarity_periodic.yaml  ceia_similarity_verification.yaml  ceia_softsystem_annotated.yaml  identification_example.yaml  lfw_pairs.yaml
configs/dataset/train_val/: casia_webface_train_val.yaml  ceia_motion_detection.yaml  ceia_motion_detection_faces.yaml  ceia_similarity.yaml  ceia_softsystem_annotated.yaml  vgg_face2.yaml
configs/early_stopper/: adaptative_early_stopper.yaml  adaptive.yaml
configs/evaluator/: identification.yaml  lfw_verification.yaml
configs/loss/: arcface.yaml  arcface_regularized.yaml  center.yaml  center_loss.yaml  cross_entropy_loss.yaml  margin_cosine_product.yaml  margin_cosine_soft.yaml  triplet.yaml
configs/trainer/: ceia_margin_cosine_finetune.yaml  ceia_softsystem_finetune.yaml  center_loss_joint_sgd.yaml  cosface_minimal_unfreeze_finetune.yaml  dinov3_cosface_lora.yaml  dinov3_cosface_lora_v1_1.yaml  dinov3_cosface_lora_v2.yaml  dinov3_l_arcface_lora.yaml  dinov3_lora_cow_faces.yaml  dinov3_lora_cow_faces_v1_1.yaml  dinov3_lora_cow_faces_v2.yaml  dinov3_lora_finetune.yaml  dinov3_lora_regularized.yaml  dinov3l_arcface_cow_faces_sota.yaml  facenet_trainer.yaml  facenet_trainer_classifier.yaml  finetune_example.yaml  head_only_finetune.yaml  inception_resnet_from_scratch_adam.yaml  inception_resnet_from_scratch_rmsprop.yaml  inception_resnet_v1_cosface.yaml  incresv1_cosface_cow_faces.yaml  lora_finetune.yaml  lvface_cosface.yaml  lvface_cosface_cow_faces.yaml  lvface_lora_finetune.yaml  megadescriptor_arcface_lora_cow_faces_v2.yaml  megadescriptor_arcface_lora_v2.yaml  megadescriptor_cosface_lora.yaml  megadescriptor_l_arcface_cow_faces_sota.yaml  megadescriptor_l_arcface_cow_faces_sota_v2.yaml  megadescriptor_l_arcface_lora.yaml  megadescriptor_l_arcface_lora_v2.yaml  megadescriptor_l_frozen_head_only_cow_faces.yaml  megadescriptor_l_head_only.yaml  megadescriptor_lora_cow_faces.yaml  mobilenetv3_trainer.yaml  partial_unfreeze_finetune.yaml
configs/transformation/eval/: dinov3.yaml  lfw_eval_transformation.yaml  megadescriptor.yaml
configs/transformation/train_val/: casia_webface.yaml  dinov3.yaml  dinov3_augmented.yaml  dinov3_strong_aug.yaml  megadescriptor.yaml  megadescriptor_strong_aug.yaml  vgg_face2.yaml  vgg_face2_augmented.yaml
gui/: app.py  run_manager.py
notebooks/: casia_webface_eda.ipynb
scripts/: backfill_lora_config.py  build_cattely_eval.py  build_eval_layout.py  build_verification_pairs.py  dedupe_and_split.py  extract_face_crops.py  heatmap_grid.py  split_dataset.py  visualize_attention.py  wrap_facenet_pretrained.py  wrap_lvface_pretrained.py
src/: registry.py
src/backbone/: __init__.py  base_backbone.py  dinov3.py  inception_resnet_v1.py  inception_resnet_v2.py  inception_v4.py  megadescriptor.py  mobilenetv3.py  vit.py
src/batch_sampler/: __init__.py  base_batch_sampler.py  facenet_batch_sampler.py
src/config/: __init__.py  base_config.py  env_config.py  env_eval_config.py  eval_dataset_config.py  loss_config.py  train_val_dataset_config.py
src/config/backbone/: __init__.py  base_backbone_config.py  inception_resnet_v1_config.py  inception_resnet_v2_config.py  inception_v4_config.py  mobilenetv3_config.py
src/config/batch_sampler/: __init__.py  base_batch_sampler_config.py  facenet_batch_sampler_config.py
src/config/early_stopper/: __init__.py  adaptative_early_stopper_config.py  base_early_stopper_config.py
src/config/evaluator/: __init__.py  base_evaluator_config.py
src/config/loss/: __init__.py  base_loss_config.py  center_loss_config.py  cross_entropy_loss_config.py  margin_cosine_product_loss_config.py  triplet_loss_config.py
src/config/trainer/: __init__.py  trainer_config.py
src/config/transformation/: __init__.py  base_transformation_config.py
src/dataset/eval/: __init__.py  base_eval_dataset.py  identification_dataset.py  lfw_pairs_dataset.py
src/dataset/train_val/: __init__.py  base_train_val_dataset.py  casia_webface_train_val_dataset.py  image_folder_dataset.py  vgg_face2_train_val_dataset.py
src/early_stopper/: __init__.py  adaptative_early_stopper.py  adaptive_early_stopper.py  base_early_stopper.py
src/evaluator/: __init__.py  base_evaluator.py  identification_evaluator.py  verification_evaluator.py
src/loss/: __init__.py  arcface_loss.py  base_loss.py  center_loss.py  cross_entropy_loss.py  margin_cosine_product_loss.py  triplet_loss.py
src/tools/: __init__.py  evaluator_builder.py  freezer.py  lora.py  metrics.py  optimizer.py  scheduler.py  seed.py  trainer_builder.py
src/trainer/: __init__.py  trainer.py  training_context.py
src/transformation/: __init__.py  base_transformation.py
src/transformation/train_val/: __init__.py  (+2 more)
tests/: conftest.py  lfw_eval_test.py  test_base_config.py  test_early_stopper.py  test_evaluator_builder.py  test_evaluators.py  test_facenet_sampler.py  test_freezer.py  test_identification_dataset.py  test_image_folder_dataset.py  test_inception_v4_blocks.py  test_lfw_pairs_dataset.py  test_lora.py  test_losses.py  test_metrics.py  test_optimizer.py  test_registry.py  test_scheduler.py  test_seed.py  test_trainer.py  test_trainer_config.py  test_transformations.py  test_vit_backbone.py  vgg_face2_dataset_test.py
(+11 files in other folders)
